replace index list remove(0) method with removeFirst()